--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 	<p>Par 1<br> knncwc	wecverefvvriknvn ncnm n n nn eqon fnrnv</p>
 	<hr>
 	<p>Par 2<br> treneknonfnbwlkfnqekjw,<br>rigrwtwitnvzwirotvniotnzrtbniw</p>
+
+<!--De aici introduc codul frame pentru cronometru-->
+
+<div style="left:0; width:100%; height:0; position:relative; padding-bottom:25%; margin:0 auto"><iframe src="https://www.tickcounter.com/widget/countdown/6654307" style="top:0; left:0; width:100%; height:100%; position:absolute; border:0; overflow:hidden" title="My countdown"></iframe></div>
 	
+<!--pana aici codul frame pentru cronometru-->	
 </body>
 
 </html>
