--- a/index.html
+++ b/index.html
@@ -24,9 +24,21 @@
 
 <!--De aici introduc codul frame pentru cronometru-->
 
-<div style="left:0; width:100%; height:0; position:relative; padding-bottom:25%; margin:0 auto"><iframe src="https://www.tickcounter.com/widget/countdown/6654307" style="top:0; left:0; width:100%; height:100%; position:absolute; border:0; overflow:hidden" title="My countdown"></iframe></div>
+<div style="left:0; width:100%; height:0; position:relative; padding-bottom:25%; margin:0 auto">
+	<iframe src="https://www.tickcounter.com/widget/countdown/6654307" style="top:0; left:0; width:100%; height:100%; position:absolute; border:0; overflow:hidden" title="My countdown">
+	</iframe>
+</div>
 	
+<!--pana aici codul frame pentru cronometru-->
+<hr>
+<!--De aici introduc codul frame pentru cronometru-->
+
+
+<script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script><a data-type="countup" data-id="414229" class="tickcounter" style="display:block; left:0; width:100%; height:0; position:relative; padding-bottom:25%; margin:0 auto;" title="Time passed" href="//www.tickcounter.com/countup">Time passed</a>
+
 <!--pana aici codul frame pentru cronometru-->	
+	
+	
 </body>
 
 </html>
