--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 	<h1>Prima pagina</h1>
 	<h2>Ne jucam in html</h2>
+	<h1>Andi, ce părere ai?</h1>
 
 	<p>Par 1<br> knncwc	wecverefvvriknvn ncnm n n nn eqon fnrnv</p>
 	<hr>
