--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 </head>
 
 <body>
-
+	<nav>	
+      		<a href="./index.html">Home</a>
+      		<a href="./about.html">About</a>
+      		<a href="./service.html">Service</a>
+      		<a href="./contact.html">Contact</a>
+    	</nav>
 	<h1>Prima pagina</h1>
 	<h2>Ne jucam in html</h2>
 	<h1>Andi, ce părere ai?</h1>
