--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
 <body>
 	<nav>	
       		<a href="./index.html">Home</a>
-      		<a href="./about.html">About</a>
-      		<a href="./service.html">Service</a>
-      		<a href="./contact.html">Contact</a>
+		<a href="./timers1.html">Timers 1</a>
+      		<a href="./timers2.html">Timers 2</a>
+		<a href="./about.html">About</a>
+      		
     	</nav>
-	<h1>Prima pagina</h1>
-	<h2>Ne jucam in html</h2>
-	<h1>Andi, ce părere ai?</h1>
+	<h1>Home</h1>
+	<h2></h2>
+	<h2>Andi, ce părere ai?</h2>
 
-	<p>Par 1<br> knncwc	wecverefvvriknvn ncnm n n nn eqon fnrnv</p>
+	<p>Par 1<br> </p>
 	<hr>
 	<p>Par 2<br> treneknonfnbwlkfnqekjw,<br>rigrwtwitnvzwirotvniotnzrtbniw</p>
 
